zebra-state/src/service/finalized_state/disk_format/tests/snapshots/sapling_note_commitment_tree_raw_data@mainnet_2.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 137
expression: cf_data

---
[
  KV(
    k: "00000000",
    v: "0000",
  ),
  KV(
    k: "00000001",
    v: "0001fbc2f4300c01f0b7820d00e3347c8da4ee614674376cbc45359daa54f9b5493e",
  ),
  KV(
    k: "00000002",
    v: "0001fbc2f4300c01f0b7820d00e3347c8da4ee614674376cbc45359daa54f9b5493e",
  ),
]
